# recval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml  publish_pyp.yml  test.yml
docs/: installation.md
docs/stylesheets/: extra.css
src/recval/: constants.py  decorators.py  evaluator.py  utils.py
src/recval/metrics/: __init__.py  accuracy.py  factory.py  metric_interface.py  metrics.py  metrics_utils.py  ranking.py
tests/: conftest.py  test_evaluator.py  test_package_version.py  test_pypoetry_template.py
tests/metrics/: conftest.py  test_accuracy.py  test_metrics_utils.py  test_ranking.py
tests/utils/: test_get_topk.py
