[tool.poetry]
name = "recval"
version = "0.1.0"
description = ""
authors = ["Edoardo D'Amico <damicoedoardo95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.56.4"
numpy = "^1.23.5"
pandas = "^1.5.2"
pytest-xdist = "^3.1.0"
strenum = "^0.4.9"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.9.3"
mypy = "^0.991"
pre-commit = "^2.20.0"
pylint = "^2.14.3"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytictoc = "^1.5.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocstrings-python = "^0.8.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
max-line-length = 120
extension-pkg-whitelist = "pydantic"
ignore-long-lines = "^.*https?://.+$"
disable = [
    "fixme",
    "missing-module-docstring",
]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


